--- a/app/src/main/res/layout/activity_card_list.xml
+++ b/app/src/main/res/layout/activity_card_list.xml
@@ -4,13 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.vasyaevstropov.runmanager.MapRunActivity">
-    <FrameLayout
+    tools:context="com.vasyaevstropov.runmanager.CardListActivity">
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/my_recycler_view"
+        android:scrollbars="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/mapFrameLayout"
-        android:layout_alignParentTop="true"
-        >
-    </FrameLayout>
+        android:layout_height="match_parent"/>
 
 </RelativeLayout>
