--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -85,8 +85,7 @@
         android:id="@+id/btnRecycler"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/btnRead"
+        android:text="RECYCLER"
         android:layout_alignParentBottom="true"
-        android:layout_alignRight="@+id/btnRead"
-        android:text="RECYCLER" />
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
