--- a/app/src/main/res/layout/activity_run_list.xml
+++ b/app/src/main/res/layout/activity_run_list.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.vasyaevstropov.runmanager.RunListActivity">
+    tools:context="com.vasyaevstropov.runmanager.Activities.RunListActivity">
 
     <FrameLayout
         android:id="@+id/allFragmentsFrameLayout"
