--- a/app/src/main/res/layout/content_setting.xml
+++ b/app/src/main/res/layout/content_setting.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.vasyaevstropov.runmanager.SettingActivity"
+    tools:context="com.vasyaevstropov.runmanager.Activities.SettingActivity"
     tools:showIn="@layout/activity_setting">
 
 
