--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -2,7 +2,7 @@
 <fragment xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:map="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.vasyaevstropov.runmanager.MapFragment"
+    tools:context="com.vasyaevstropov.runmanager.Activities.MapFragment"
 
     android:id="@+id/map"
     android:layout_width="fill_parent"
