--- a/app/src/main/res/layout/content_setting.xml
+++ b/app/src/main/res/layout/content_setting.xml
@@ -12,21 +12,36 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal">
+        android:orientation="vertical"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="11dp">
 
-        <TextView
-            android:id="@+id/tvTEST"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="TEXT-TEXT"
-            android:textSize="50sp" />
+            android:orientation="vertical">
 
-        <NumberPicker
-            android:id="@+id/numberPicker"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/app_style"
+                android:textAlignment="center"
+                android:textSize="16sp" />
+
+            <Spinner
+                android:id="@+id/spinner"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+
+                android:drawSelectorOnTop="true" />
+
+
+
+        </LinearLayout>
+
     </LinearLayout>
 
 </RelativeLayout>
