--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -11,17 +11,15 @@
     tools:showIn="@layout/app_bar_main">
 
     <fragment
-
-
-        android:id="@+id/map"
+        android:id="@+id/map_main"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         map:uiCompass="true"
         map:mapType="normal"
         map:uiRotateGestures="false"
         map:uiScrollGestures="false"
-        map:uiTiltGestures="true"
+        map:uiTiltGestures="false"
         map:uiZoomControls="false"
-        map:uiZoomGestures="false"
+        map:uiZoomGestures="true"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
