--- a/app/src/main/res/layout/activity_media_player.xml
+++ b/app/src/main/res/layout/activity_media_player.xml
@@ -17,26 +17,20 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_alignParentTop="true"
-            android:layout_weight="1"
+            android:layout_weight="4"
             android:layout_centerHorizontal="true" />
-
 
 
         <FrameLayout
             android:id="@+id/musicFrame"
             android:layout_width="match_parent"
-            android:layout_weight="1"
             android:layout_height="0dp"
             android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"/>
+            android:layout_alignParentStart="true"
+            android:layout_weight="1" />
 
 
     </LinearLayout>
-
-
-
-
-
 
 </RelativeLayout>
