--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -3,34 +3,18 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="-Import" />
-        <item
-            android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="History" />
-        <item
-            android:id="@+id/nav_slideshow"
+            android:id="@+id/mus_player"
             android:icon="@drawable/ic_menu_slideshow"
-            android:title="-Slideshow" />
+            android:title="@string/music_player" />
         <item
-            android:id="@+id/nav_manage"
+            android:id="@+id/history"
+            android:icon="@drawable/ic_menu_gallery"
+            android:title="@string/run_history" />
+
+        <item
+            android:id="@+id/settings"
             android:icon="@drawable/ic_menu_manage"
-            android:title="-Tools" />
+            android:title="@string/settings" />
+
     </group>
-
-    <item android:title="Communicate">
-        <menu>
-            <item
-                android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_share"
-                android:title="Share" />
-            <item
-                android:id="@+id/nav_send"
-                android:icon="@drawable/ic_menu_slideshow"
-                android:title="MusicPlayer" />
-        </menu>
-    </item>
-
 </menu>
