--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,6 @@
     <color name="night">#2E7D32</color>
     <color name="silver">#9E9E9E</color>
 
+    <color name="DarkSilver">#424242</color>
+
 </resources>
