bottomSheet open/close - onClick

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -33,6 +33,7 @@
             map:uiZoomGestures="true" />
 
         <RelativeLayout
+            android:id="@+id/relativeMap"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
