--- a/app/src/main/res/layout/bottom_sheet.xml
+++ b/app/src/main/res/layout/bottom_sheet.xml
@@ -6,8 +6,9 @@
     android:layout_height="340dp"
     android:background="@android:color/darker_gray"
     android:orientation="vertical"
+
     app:behavior_hideable="false"
-    app:behavior_peekHeight="80dp"
+
     app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
 
     <FrameLayout
@@ -15,7 +16,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/silver"
-        android:gravity="center">
-    </FrameLayout>
+        android:gravity="center"></FrameLayout>
 
 </LinearLayout>
