--- a/app/src/main/res/layout/bottom_sheet.xml
+++ b/app/src/main/res/layout/bottom_sheet.xml
@@ -16,6 +16,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/silver"
-        android:gravity="center"></FrameLayout>
+        android:gravity="center">
+    </FrameLayout>
 
 </LinearLayout>
