--- a/app/src/main/res/layout/cardview_run.xml
+++ b/app/src/main/res/layout/cardview_run.xml
@@ -8,14 +8,16 @@
     <android.support.v7.widget.CardView
         android:id="@+id/card_view"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_margin="15dp"
-        card_view:cardCornerRadius="4dp">
+        android:layout_height="80dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginTop="10dp"
+        card_view:cardCornerRadius="8dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="16dp">
+            android:padding="8dp">
 
             <TextView
                 android:id="@+id/tvDayOfWeek"
@@ -46,6 +48,18 @@
                 android:layout_alignParentLeft="true"
                 android:text="01.01.2000"
                 android:textSize="24sp" />
+
+            <ImageView
+                android:id="@+id/ivDelete"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:tint="@color/silver"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:adjustViewBounds="false"
+                android:cropToPadding="false"
+                card_view:srcCompat="@android:drawable/ic_menu_delete" />
 
         </RelativeLayout>
     </android.support.v7.widget.CardView>
