--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -68,7 +68,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:layout_marginBottom="18dp"
-                android:text="START"
+                android:text="@string/start"
                 android:textSize="20sp" />
 
 
