--- a/app/src/main/res/layout/fragment_music.xml
+++ b/app/src/main/res/layout/fragment_music.xml
@@ -10,6 +10,7 @@
         android:orientation="vertical">
 
         <RelativeLayout
+            android:background="@color/colorPrimary"
             android:id="@+id/musicRelative"
             android:layout_width="match_parent"
             android:layout_height="80dp"
@@ -71,7 +72,8 @@
             android:id="@+id/musicLV"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#f9f9f9" />
+            style="@style/MyTextStyle"
+             />
 
     </LinearLayout>
 
