--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="dark">#434242</color>
     <color name="night">#2E7D32</color>
     <color name="silver">#9E9E9E</color>
+    <color name="lightSilver">#c6c6c6</color>
 
     <color name="DarkSilver">#424242</color>
 
