--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,6 +9,7 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+
     </style>
 
     <style name="AppTheme.NoActionBar">
@@ -21,14 +22,22 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="MyTextStyle" parent="@android:style/TextAppearance.Medium">
 
-     <style name="AppTheme.Dark" parent="AppTheme.NoActionBar">
-         <item name="windowActionBar">false</item>
-         <item name="windowNoTitle">true</item>
-            <item name="colorPrimary">#434242</item>
-            <item name="colorPrimaryDark">#000000</item>
-            <item name="colorAccent">#FF8A65</item>
-     </style>
+        <item name="android:textColor">#4e4e4e</item>
+        <item name="android:typeface">monospace</item>
+    </style>
+
+
+    <style name="AppTheme.Dark" parent="AppTheme.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+        <item name="android:windowBackground">@color/lightSilver</item>
+        <item name="colorPrimary">#434242</item>
+        <item name="colorPrimaryDark">#000000</item>
+        <item name="colorAccent">#FF8A65</item>
+        <item name="android:textColor">#fdfdfd</item>
+    </style>
 
     <style name="AppTheme.Night" parent="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
@@ -36,6 +45,7 @@
         <item name="colorPrimary">#2E7D32</item>
         <item name="colorPrimaryDark">#1B5E20</item>
         <item name="colorAccent">#FF4081</item>
+        <item name="android:textColor">#fdfdfd</item>
     </style>
 
     <style name="AppTheme.Blue" parent="AppTheme.NoActionBar">
@@ -44,13 +54,17 @@
         <item name="colorPrimary">#2196F3</item>
         <item name="colorPrimaryDark">#1565C0</item>
         <item name="colorAccent">#FF4081</item>
+
+        <item name="android:textColor">#fdfdfd</item>
     </style>
 
     <style name="AppTheme.Silver" parent="AppTheme.NoActionBar">
+        <item name="android:textColor">@color/DarkSilver</item>
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
         <item name="colorPrimary">#9E9E9E</item>
         <item name="colorPrimaryDark">#424242</item>
         <item name="colorAccent">#FF4081</item>
+
     </style>
 </resources>
