--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -15,6 +15,10 @@
             android:id="@+id/settings"
             android:icon="@drawable/ic_menu_manage"
             android:title="@string/settings" />
+        <item
+            android:id="@+id/chat"
+            android:icon="@drawable/ic_menu_manage"
+            android:title="@string/settings" />
 
     </group>
 </menu>
