--- a/app/src/main/res/layout/chat_card.xml
+++ b/app/src/main/res/layout/chat_card.xml
@@ -9,23 +9,20 @@
         android:id="@+id/tvTime"
         android:layout_width="50dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:text="time" />
+        android:layout_alignParentRight="true" />
 
     <TextView
         android:id="@+id/tvLogin"
-        android:layout_width="120dp"
+        android:layout_width="240dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:text="TextView" />
+        android:layout_alignParentLeft="true" />
 
     <TextView
         android:id="@+id/tvMessage"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:maxLines="3"
-        android:text="message...\n \n \n \n"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:maxLines="3" />
 </RelativeLayout>
