--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -21,10 +21,6 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include
-        layout="@layout/content_chat"
-      />
-
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
@@ -37,5 +33,7 @@
         android:layout_marginRight="35dp"
         android:layout_marginEnd="35dp"
         android:layout_marginBottom="20dp" />
+
+    <include layout="@layout/content_chat"/>
 
 </RelativeLayout>
