--- a/app/src/main/res/layout/content_chat.xml
+++ b/app/src/main/res/layout/content_chat.xml
@@ -4,27 +4,28 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.vasyaevstropov.runmanager.ChatActivity"
-    tools:showIn="@layout/activity_chat">
+    tools:context="com.vasyaevstropov.runmanager.ChatActivity">
 
-
-    <ListView
-        android:paddingTop="45dp"
-        android:id="@+id/listViewChat"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/editTextMessage"
-
-        />
 
     <android.support.design.widget.TextInputEditText
         android:id="@+id/editTextMessage"
-        android:hint="Put some text here..."
-        android:layout_width="match_parent"
+        android:hint="Введите сюда сообщение..."
+        android:layout_width="0dp"
         android:layout_height="40dp"
-        android:layout_alignParentBottom="true" />
+        android:layout_alignParentBottom="true"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp" />
 
+    <ListView
+        android:layout_alignParentTop="true"
+        android:id="@+id/listViewChat"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/editTextMessage" />
 
 
 </RelativeLayout>
