chat : -scroll to the end of listview

--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -34,6 +34,9 @@
         android:layout_marginEnd="35dp"
         android:layout_marginBottom="20dp" />
 
-    <include layout="@layout/content_chat"/>
+    <include layout="@layout/content_chat"
+        android:layout_alignBottom="@+id/fab"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
