--- a/app/src/main/res/layout/content_chat.xml
+++ b/app/src/main/res/layout/content_chat.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+
     tools:context="com.vasyaevstropov.runmanager.ChatActivity">
 
 
@@ -16,12 +16,12 @@
             android:layout_alignParentTop="true"
             android:transcriptMode="alwaysScroll"
             android:stackFromBottom="true"
-            android:layout_weight="1" />
+             />
 
         <android.support.design.widget.TextInputEditText
             android:id="@+id/editTextMessage"
             android:layout_width="match_parent"
-            android:layout_height="80dp"
+            android:layout_height="50dp"
             android:layout_alignParentBottom="true"
 
 
@@ -32,4 +32,4 @@
             app:layout_constraintRight_toRightOf="parent" />
 
 
-</LinearLayout>
+</RelativeLayout>
